# Gecko

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODING_STANDARDS.md  CmakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
.vscode.bak/: keybindings.json  launch.json  settings.json  tasks.json
Commands/: BuildDebug.bat  BuildRelease.bat
Example/: CMakeLists.txt  main.cpp
Example/Include/: CustomPass.h  DebugSceneUIRenderer.h  ExampleComputePass.h  FlatHierarchyScene.h  GLTFSceneLoader.h  NodeBasedScene.h
Example/Shaders/: BloomComposite.cso  BloomDownScale.cso  BloomThreshold.cso  BloomUpScale.cso  CubemapPixel.cso  CubemapVertex.cso  DownSample.cso  FXAA.cso  FullScreenTexturePixel.cso  FullScreenTextureVertex.cso  GBufferShaderPixel.cso  GBufferShaderVertex.cso  HDR_to_cube.cso  IrradianceMap.cso  PBRShader.cso  Raytracing.cso  ShadowPixel.cso  ShadowVertex.cso  TonemapAndGammaCorrect.cso
Example/WorkingDir/Shaders/: Cubemap.gsh  DownSample.gsh  ExampleCompute.gsh  FXAA.gsh  FullScreenTexture.gsh  GBufferShader.gsh  HDR_to_cube.gsh  IrradianceMap.gsh  PBRShader.gsh  Shadow.gsh  TonemapAndGammaCorrect.gsh  triangle.gsh
Example/WorkingDir/Shaders/Bloom/: BloomComposite.gsh  BloomDownScale.gsh  BloomThreshold.gsh  BloomUpScale.gsh
Example/src/: CustomPass.cpp  DebugSceneUIRenderer.cpp  ExampleComputePass.cpp  FlatHierarchyScene.cpp  GLTFSceneLoader.cpp  NodeBasedScene.cpp
Gecko/: Gecko.sln
Gecko/Gecko/: Gecko.vcxproj  Gecko.vcxproj.filters  imgui.ini
Gecko/Gecko/ShadersSource/: HDR_to_cube.h  ShaderDefines.h
Gecko/Gecko/src/: Defines.h  main.cpp
Include/: Defines.h
Include/Core/: Asserts.h  Event.h  Input.h  Logger.h  Memory.h  Platform.h
Include/Event/: Event.h
Include/Logging/: Logger.h
Include/Platform/: Platform.h
Include/Rendering/Backend/: CommandList.h  Device.h  Objects.h
Include/Rendering/Frontend/: ApplicationContext.h
Include/UI/: DebugUIRenderer.h
ShadersSource/: DownSample.h  FullScreenTexture.h  IrradianceMap.h  ShaderDefines.h  TonemapAndGammaCorrect.h
ShadersSource/Bloom/: BloomDownScale.h
ShadersSource/hlsl/: CubemapPixel.hlsl  FXAA.hlsl  HDR_to_cube.hlsl  IrradianceMap.hlsl  PBRShader.hlsl  ShadowPixel.hlsl  ShadowVertex.hlsl
ShadersSource/hlsl/Bloom/: BloomComposite.hlsl  BloomDownScale.hlsl  BloomUpScale.hlsl
ShadersSource/hlsl/Raytracing/: Raytracing.hlsl
cmake/: GeckoConfig.cmake.in  install.cmake
docs/: CODING_STANDARDS.md  README.md  architecture.md  build.md  contributing.md  project-guide.md  release-workflow.md
docs/architecture/: data-storage.md  overview.md
docs/modules/: README.md
docs/modules/Core/: event-system.md
docs/roadmaps/: documentation.md  engine.md
docs/trello/: board.md
examples/: CMakeLists.txt  main.cpp
examples/app_skeleton/: CMakeLists.txt
examples/app_skeleton/src/: main.cpp
examples/core_example/: CMakeLists.txt
examples/core_example/src/: main.cpp
examples/math_example/: CMakeLists.txt
examples/math_example/src/: main.cpp
examples/platform_example/: CMakeLists.txt  main.cpp
examples/platform_example/src/: main.cpp
examples/platform_min/: CMakeLists.txt  main.cpp
include/gecko/: version.h
include/gecko/core/: api.h  assert.h  bit.h  boot.h  category.h  core.h  events.h  hash.h  jobs.h  labels.h  log.h  logger.h  memory.h  modules.h  optional.h  profiler.h  ptr.h  random.h  scope.h  services.h  sink_registration.h  thread.h  time.h  types.h  version.h
include/gecko/math/: aabb.h  math.h  matrix.h  quat.h  rotor.h  vector.h
include/gecko/platform/: platform_context.h  platform_events.h  platform_module.h  window.h
include/gecko/runtime/: console_log_sink.h  console_sink.h  crash_safe_trace_profiler_sink.h  event_bus.h  file_log_sink.h  file_sink.h  immediate_logger.h  module_registry.h  ring_logger.h  ring_profiler.h  runtime_module.h  thread_pool_job_system.h  trace_file_sink.h  trace_writer.h  tracker_allocator.h  tracking_allocator.h
scripts/: cli.py  dev_env.ps1  dev_env.sh  example_gen.py  format.py  format.sh  module_gen.py  setup.ps1  setup.sh  setup_dev.py
scripts/commands/: build.py  format.py  new_example.py  new_module.py  package.py  setup.py  test.py
src/: CMakeLists.txt
src/Core/: Event.cpp  Input.cpp  Logger.cpp  Memory.cpp
src/Core/win32/: Platform_WIN32.cpp
src/Event/: Event.cpp
src/Logging/: Logger.cpp
src/Platform/win32/: Platform_WIN32.cpp
src/Rendering/Backend/: CommandList.cpp  Device.cpp  Objects.cpp
src/Rendering/DX12/: CommandList_DX12.cpp  CommandList_DX12.h  CommonHeaders_DX12.h  d3dx12.h  (+8 more)
src/ThirdPartyBuilds/: GLTFBuild.cpp  ImGuiBuild.cpp
src/UI/: DebugUIRenderer.cpp
src/core/: CMakeLists.txt  events.cpp  labels.h  modules.cpp  overwrite_new.cpp  random.cpp  services.cpp  thread.cpp  time.cpp
src/core/private/: labels.h
src/core/services/: events.cpp  jobs.cpp  log.cpp  memory.cpp  modules.cpp  profiler.cpp
src/core/utility/: random.cpp  thread.cpp  time.cpp
src/math/: CMakeLists.txt
src/platform/: CMakeLists.txt  categories.h  labels.h  platform_context.cpp  platform_module.cpp  window.cpp  window_backend.h
src/platform/linux/: platform_context_linux.cpp  x11_window_backend.cpp
src/platform/private/: labels.h
src/platform/windows/: platform_context_windows.cpp
src/runtime/: CMakeLists.txt  categories.h  console_log_sink.cpp  console_sink.cpp  crash_safe_trace_profiler_sink.cpp  event_bus.cpp  file_log_sink.cpp  file_sink.cpp  immediate_logger.cpp  labels.h  module_registry.cpp  override_new.cpp  ring_logger.cpp  ring_profiler.cpp  runtime_module.cpp  thread_pool_job_system.cpp  trace_file_sink.cpp  trace_writer.cpp  tracker_allocator.cpp  tracking_allocator.cpp
src/runtime/private/: labels.h
template/module/src/__MODULE__/: CMakeLists.txt  __MODULE___module.cpp
template/module/src/__MODULE__/private/: labels.h
test/: CMakeLists.txt  README.md
test/math/: CMakeLists.txt  test_aabb.cpp  test_matrix.cpp  test_quat.cpp  test_rotor.cpp  test_vector.cpp
working_dir/: gecko_trace.json  log.txt
(+117 files in other folders)
